--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "utube",
   "version": "1.0.0",
   "description": "Creating Utube-like website",
-  "main": "index.js",
+  "main": "init.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js --delay 2snpm"
+    "start": "nodemon --exec babel-node init.js --delay 2snpm"
   },
   "author": "houngkyung-kim",
   "dependencies": {
